corrects spacing for tables pagination

--- a/src/shared/styles/_custom.scss
+++ b/src/shared/styles/_custom.scss
@@ -120,9 +120,13 @@ table {
   .usa-select {
     width: 89px;
     height: 38px;
+    @include u-padding-x(0);
+    @include u-margin(0);
+    @include u-margin-x('105');
   }
   .usa-button--unstyled {
-    @include u-padding-x(1);
+    @include u-margin(0);
+    @include u-padding-x(0);
   }
 }
 
